# sigstore-models

./: README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  zizmor.yml
src/sigstore_models/bundle/v1/: __init__.py
src/sigstore_models/common/v1/: __init__.py
src/sigstore_models/rekor/v1/: __init__.py
src/sigstore_models/trustroot/v1/: __init__.py
test/: test_core.py
test/rekor/: test_v1.py
